# ArrayIO

./: pyproject.toml
arrayio/: __init__.py  main.py
tests/: __init__.py  test_csvio.py  test_excelio.py
